Added file chooser w/ activity
Activity is launched when you select “ok” in the “New” button dialog.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ## Eclipse
 #################
 
+/bin
 *.pydevproject
 .project
 .metadata
@@ -213,3 +214,5 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+Clipsy/bin/
