--- a/Clipsy/AndroidManifest.xml
+++ b/Clipsy/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:maxSdkVersion="19" android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
