--- a/Clipsy/AndroidManifest.xml
+++ b/Clipsy/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.tsp.clipsy.Splash"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+    		android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +30,8 @@
         </activity>
         <activity
             android:name="com.tsp.clipsy.MainMenu"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,16 +41,19 @@
         <activity
             android:name="com.tsp.clipsy.FileChooser"
             android:label="@string/title_activity_file_chooser"
-            android:parentActivityName="com.tsp.clipsy.MainMenu" >
+            android:parentActivityName="com.tsp.clipsy.MainMenu"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.tsp.clipsy.Viewer"
-            android:label="@string/title_activity_viewer" >
+            android:label="@string/title_activity_viewer"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.tsp.clipsy.PreviewActivity"
             android:label="@string/title_activity_preview"
-            android:parentActivityName="com.tsp.clipsy.FileChooser" >
+            android:parentActivityName="com.tsp.clipsy.FileChooser" 
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.tsp.clipsy.PreviewFragment"
