--- a/Clipsy/AndroidManifest.xml
+++ b/Clipsy/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/clipsy_splash"
+        android:icon="@drawable/clipsy_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
